--- a/my-app/package.json
+++ b/my-app/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "license": "MIT",
   "dependencies": {
-    
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -16,7 +15,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "webpack --config webpack.config.js",
+    "build": "yarn build --base src",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
